update sources rocko

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
-project(SocketTest)
+project(rocko C)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.c server.c request.c response.c server.h route.c)
-add_executable(SocketTest ${SOURCE_FILES})
+set(SOURCE_FILES main.c rocko.c rocko.h)
+add_executable(rocko ${SOURCE_FILES})
